--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.min.css" />
 
-    <title>React App</title>
+    <title>WU Researcher</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
